--- a/requirements.txt
+++ b/requirements.txt
@@ -1,115 +1,6 @@
 azure-iothub-service-client==1.4.4
-alabaster==0.7.11
-amqp==2.3.2
-appdirs==1.4.3
-astroid==2.0.4
-attrs==18.1.0
-azure-iothub-provisioningserviceclient==1.0.0
-backcall==0.1.0
-billiard==3.5.0.4
-bleach==2.1.3
-cached-property==1.4.3
-certifi==2018.8.24
-chardet==3.0.4
-click==6.7
-click-plugins==1.0.3
-cligj==0.4.0
-cloudpickle==0.5.3
-colorama==0.3.9
-cycler==0.10.0
-decorator==4.3.0
-defusedxml==0.5.0
-descartes==1.1.0
-dj-database-url==0.5.0
-Django==1.11
-django-celery-results==1.0.1
-django-common-helpers==0.9.1
-django-cors-headers==2.1.0
-django-enumfield==1.3b2
-django-filter==1.0.4
-django-heroku==0.3.1
-django-invitations==1.9.1
-djangorestframework==3.6.4
-djutils==0.3.2
-dnspython==1.15.0
-docutils==0.14
-drfdocs==0.0.11
-entrypoints==0.2.3
-et-xmlfile==1.0.1
-eventlet==0.24.1
-greenlet==0.4.15
-gunicorn==19.9.0
-html5lib==1.0.1
-httplib2==0.11.3
-idna==2.7
-imagesize==1.0.0
-inflect==0.3.1
-isodate==0.6.0
-isort==4.3.4
-jdcal==1.4
-jedi==0.12.1
-jws==0.1.3
-keyring==13.2.1
-lazy-object-proxy==1.3.1
-Markdown==2.6.9
-MarkupSafe==1.0
-mccabe==0.6.1
-mistune==0.8.3
-monotonic==1.5
-mpmath==1.0.0
-msrest==0.5.5
-munch==2.3.2
-nbconvert==5.3.1
-nbformat==4.4.0
-oauth2client==3.0.0
-oauthlib==2.1.0
-olefile==0.44
-openpyxl==2.5.3
-packaging==17.1
-pickleshare==0.7.4
-Pillow==4.2.1
-prompt-toolkit==1.0.15
-protobuf==3.6.1
-psutil==5.4.7
-psycopg2==2.7.3.1
-pyasn1==0.4.4
-pyasn1-modules==0.2.2
-pycodestyle==2.4.0
-pycryptodome==3.4.3
-pyflakes==2.0.0
-Pygments==2.2.0
-PyJWT==1.5.3
-pylint==2.1.1
-pyparsing==2.2.0
-PyQt5==5.9.2
-PySocks==1.6.7
-python-dateutil==2.5.3
-python-jwt==2.0.1
-pytz==2017.2
-pywin32-ctypes==0.1.2
-pyzmq==17.1.2
-QtAwesome==0.4.4
-qtconsole==4.4.0
-QtPy==1.4.2
-requests==2.19.1
-requests-oauthlib==1.0.0
-requests-toolbelt==0.7.0
-rope==0.11.0
-rsa==3.4.2
-simplegeneric==0.8.1
-sip==4.19.8
-six==1.11.0
-snowballstemmer==1.2.1
-Sphinx==1.7.6
-sphinxcontrib-websupport==1.1.0
-sympy==1.3
-testpath==0.3.1
-traitlets==4.3.2
-typed-ast==1.1.0
-urllib3==1.22
-vine==1.1.4
-wcwidth==0.1.7
-webencodings==0.5.1
-whitenoise==4.1
-wrapt==1.10.11
-zeep==3.1.0
+Django==2.1.3
+django-rest-framework-docs==0.1.7
+djangorestframework==3.9.0
+jsonpickle==1.0
+pytz==2018.7
